--- a/TransferTool/TransferTool/TransferTool.csproj
+++ b/TransferTool/TransferTool/TransferTool.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.10" />
+    <PackageReference Include="Spire.PDF" Version="10.3.7" />
   </ItemGroup>
 
 </Project>
