--- a/TransferTool/TransferTool/TransferTool.csproj
+++ b/TransferTool/TransferTool/TransferTool.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.PDF" Version="24.3.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.10" />
     <PackageReference Include="Spire.PDF" Version="10.3.7" />
