--- a/TransferTool/TransferTool/TransferTool.csproj
+++ b/TransferTool/TransferTool/TransferTool.csproj
@@ -11,9 +11,8 @@
   <ItemGroup>
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.10" />
-    <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="25.1.35" />
-    <PackageReference Include="Syncfusion.Pdf.AspNet.Mvc5" Version="25.1.35" />
-    <PackageReference Include="Syncfusion.Pdf.OCR.WinForms" Version="25.1.35" />
+    <PackageReference Include="Spire.PDF" Version="10.3.16" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="25.1.37" />
   </ItemGroup>
 
 </Project>
